bat.bool1.makes10.Makes10.scala.error
Erreur de compilation :
Makes10:3: error: '(' expected but identifier found.
  if a==10||b==10|| a+b==10{
     ^Makes10:9: error: illegal start of simple expression
} 
^